1、scron表达式（jar包工具生成） 2、simHash网页去重（内容去重）

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <!--simhash-->
+        <dependency>
+            <groupId>com.lou</groupId>
+            <artifactId>simhasher</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
