--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=wj
 #Jpa
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+
+#Elasticsearch≈‰÷√
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
